# api/swagger.yaml
@@ -512,7 +512,7 @@ paths:
         404:
           description: "Cart not found"
       x-swagger-router-controller: "Cart"
-  /cart/insert:
+  /cartInsert:
     post:
       tags:
       - "cart"
@@ -530,19 +530,42 @@ paths:
         schema:
           type: "object"
           properties:
-            user_id: 
-              type: "integer"
-            quantity: 
-              type: "integer"
+            user_id:
+              type: "string"
             total:
-              type: "integer" 
-            isbn: 
-              type: "string"              
+              type: "string"
+            quantity:
+              type: "string"
+            isbn:
+              type: "string"             
       responses:
         200:
           description: "Successful"
         404:
           description: "unauthorized"
+      x-swagger-router-controller: "Cart"
+  /cartDelete/{userId}:
+    delete:
+      tags:
+      - "cart"
+      description: "Returns books"
+      operationId: "deleteCart"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "userId"
+        in: "path"
+        description: "ID of user"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Author"
+        400:
+          description: "Invalid ID supplied"
       x-swagger-router-controller: "Cart"
 definitions:
   Author:
@@ -608,14 +631,13 @@ definitions:
       - "isbn"
     properties:
       user_id:
-        type: "integer"
+        type: "string"
       total:
-        type: "integer"
+        type: "string"
       quantity:
-        type: "integer"
+        type: "string"
       isbn:
         type: "string"
-        $ref: "#/definitions/Book"
     title: "Cart"
     description: "Order for books"
   Book:
